  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.

- Issue 15307: Virtual environments now use symlinks with framework builds
  on Mac OS X, like other POSIX builds.

Library
-------

- Issue #15402: An issue in the struct module that caused sys.getsizeof to
  return incorrect results for struct.Struct instances has been fixed.
  Initial patch by Serhiy Storchaka.

- Issue #15232: when mangle_from is True, email.Generator now correctly mangles
  lines that start with 'From ' that occur in a MIME preamble or epilogue.

- Issue #15094: Incorrectly placed #endif in _tkinter.c.
  Patch by Serhiy Storchaka.

- Issue #13922: argparse no longer incorrectly strips '--'s that appear
  after the first one.

- Issue #12353: argparse now correctly handles null argument values.

- Issues #10017 and #14998: Fix TypeError using pprint on dictionaries with
  user-defined types as keys or other unorderable keys.

- Issue #15397: inspect.getmodulename() is now based directly on importlib
  via a new importlib.machinery.all_suffixes() API.

- Issue #14635: telnetlib will use poll() rather than select() when possible
  to avoid failing due to the select() file descriptor limit.

- Issue #15180: Clarify posixpath.join() error message when mixing str & bytes

- Issue #15343: pkgutil now includes an iter_importer_modules implementation
  for importlib.machinery.FileFinder (similar to the way it already handled
  zipimport.zipimporter)

- Issue #15314: runpy now sets __main__.__loader__ correctly

- Issue #15357: The import emulation in pkgutil is now deprecated. pkgutil
  uses importlib internally rather than the emulation

- Issue #15233: Python now guarantees that callables registered with
  the atexit module will be called in a deterministic order.
